# OxiCloud

./: Cargo.toml  biome.json  entrypoint.sh  justfile
.github/workflows/: ci.yml  playwright-update-snapshots.yml
docs/.vitepress/: config.mts
docs/architecture/: rebac-authorization.md  user-lifecycle.md
docs/plan/: User-Image-support.md  User-Lifecycle.md
migrations/: 20260526000000_add_user_image.sql  20260601000001_cleanup_recent_invalid_item_ids.sql  20260612000002_auth_users_is_external.sql  20260622000000_auth_users_email_verified_at.sql
src/: integration_test_support.rs  lib.rs
src/application/adapters/: webdav_adapter.rs
src/application/dtos/: favorites_dto.rs  file_dto.rs  folder_dto.rs  recent_dto.rs  settings_dto.rs  user_dto.rs
src/application/ports/: auth_ports.rs  favorites_ports.rs  mod.rs  recent_ports.rs  user_lifecycle.rs
src/application/services/: auth_application_service.rs  external_identity_service.rs  favorites_service.rs  file_lifecycle_service.rs  file_management_service.rs  folder_service.rs  mod.rs  recent_service.rs  subject_group_service.rs  trash_service.rs  trash_service_test.rs  user_lifecycle_service.rs
src/common/: di.rs
src/domain/entities/: file.rs  folder.rs  user.rs
src/domain/repositories/: trash_repository.rs
src/infrastructure/: auth_factory.rs
src/infrastructure/repositories/pg/: favorites_pg_repository.rs  file_blob_read_repository.rs  file_blob_write_repository.rs  recent_items_pg_repository.rs  subject_group_pg_repository.rs  trash_db_repository.rs  user_pg_repository.rs
src/infrastructure/services/: dedup_service.rs  image_transcode_service.rs  oidc_service.rs  path_resolver_service.rs  pg_acl_engine.rs
src/interfaces/api/: routes.rs
src/interfaces/api/handlers/: auth_handler.rs  contacts_handler.rs  favorites_handler.rs  folder_handler.rs  recent_handler.rs  webdav_handler.rs
src/interfaces/nextcloud/: report_handler.rs  webdav_handler.rs
static/: index.html  profile.html
static/css/components/: shareModal.css  userMenu.css  userVignette.css
static/css/views/: profile.css
static/js/app/: authSession.js  filesView.js  main.js  navigation.js  state.js  ui.js  userMenu.js
static/js/components/: pendingEmailVignette.js  shareModal.js  userVignette.js
static/js/core/: fetchWrapper.js  groupBySync.js  icons.js  types.js
static/js/features/files/: batchToolbar.js  contextMenus.js  fileOperations.js  inlineViewer.js
static/js/model/: favoritesModel.js  recentModel.js  systemUsers.js
static/js/utils/: download.js  imageResize.js
static/js/views/favorites/: favoritesView.js
static/js/views/profile/: profile.js
static/js/views/recent/: recentView.js
static/js/views/sharedWithMe/: sharedWithMeView.js
static/js/views/trash/: trashView.js
static/locales/: ar.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  zh-TW.json  zh.json
tests/api/: external_users.hurl  registration.hurl  storage_cleanup_check.sh
tests/common/: init-test-schema.sh
tests/e2e/: playwright.config.ts
